styles/styles.scss
/* ... */
a.smooth-scroll {
    margin: 5px;
    display: block;
    width: 60px;
    height: 60px;
}

.theme-btn {
    top: 5%;
    right: 3%;
    width: 70px;
    height: 70px;
    border-radius: 20%;
    background-color: var(--color-grey-5);
    cursor: pointer;
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
    transition: all 0.1s ease-in-out;

    &:active {
        transform: translateY(-3px);
    }

    i {
        font-size: 1.4rem;
        color: var(--color-grey-2);
        pointer-events: none;
    }
}

//Header-content
.header-content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    min-height: 100vh;

    .left-header {
        display: flex;
        align-items: center;
        position: relative;

        .shape {
            transition: all 0.4s ease-in-out;
            width: 80%;
            height: 100%;
            background-color: var(--color-secondary);
            position: absolute;
            left: 0;
            top: 0;
            z-index: 1;
            clip-path: polygon(0 0, 100% 0, 89% 100%, 0% 100%);
        }

        .image {
            position: absolute;
            bottom: 0;
            left: 0;
            width: 95%;
            height: 100%;
            transform: translateY(2%);
            z-index: 2;
            border-radius: var(--br-sm-2);
            background-color: transparent;
            transition: all 0.4s ease-in-out;

            img {
                transform: translateX(-5%);
                height: 100%;
                object-fit: cover;
                transition: all 0.4s ease-in-out;
                filter: grayscale(100%);
                &:hover {
                    filter: grayscale(0);
                }
            }
        }
    }

    .transparent-image {
        background-color: transparent !important;
    }

    .right-header {
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding-right: 18rem;

        .name {
            font-size: 2.2rem;

            span {
                color: var(--color-secondary);
            }
        }

        p {
            margin: 1.5rem 0;
            line-height: 2rem;
        }
    }
}

// About
.about-container {
    display: flex;
    flex-wrap: wrap;
    padding-top: 3.5rem;
    padding-bottom: 5rem;
}
.about-cards{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.left-about {
    flex: 1;
}

.right-about {
    margin-right: 2rem;
    margin-left: 2rem;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.about-item {
    border: 1px solid var(--color-grey-4);
    flex-basis: 100%;
    background-color: var(--color-primary);
    border-radius: 10px;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    height: 260px;
    position: relative;
    margin-bottom: 2rem;
}

@media only screen and (min-width: 1024px) {
    .about-item {
        flex-basis: calc(100% - 1rem);
    }
}

.about-item:hover::before {
    opacity: 1;
    border: 1px solid var(--color-secondary);
}

.about-item::before,
.about-item::after {
    border-radius: inherit;
    content: "";
    height: 100%;
    left: 0px;
    opacity: 0;
    position: absolute;
    top: 0px;
    transition: opacity 500ms;
    width: 100%;
}

.about-item::before {
    background: radial-gradient(
        800px circle at var(--mouse-x) var(--mouse-y),
        rgba(146, 146, 146, 0.1),
        transparent 40%
    );
    z-index: 3;
}

.about-item::after {
    background: radial-gradient(
        600px circle at var(--mouse-x) var(--mouse-y),
        rgba(255, 255, 255, 0.2),
        transparent 40%
    );
    z-index: 1;
}

.abt-text {
    padding: 1.5rem;
    display: flex;
    flex-direction: column;
}

.large-text {
    font-size: 3rem;
    font-weight: 700;
    color: var(--color-secondary);
}

.small-text {
    padding-left: 3rem;
    position: relative;
    text-transform: uppercase;
    font-size: 1.2rem;
    color: var(--color-grey-1);
    letter-spacing: 2px;
}

.small-text::before {
    content: "";
    position: absolute;
    left: 0;
    top: 15px;
    width: 2rem;
    height: 2px;
    background-color: var(--color-grey-5);
}

.left-about {
    padding-right: 5rem;

    p {
        line-height: 2rem;
        padding: 1rem;
        color: var(--color-grey-1);
    }

    h4 {
        font-size: 2rem;
        text-transform: uppercase;
    }
}
/* ... */

